estado_agente prevent filter options overlapping

--- a/pandora_console/include/styles/pandora.css
+++ b/pandora_console/include/styles/pandora.css
@@ -474,6 +474,9 @@ select:-internal-list-box {
 .w20px {
   width: 20px;
 }
+.nowrap {
+  white-space: nowrap;
+}
 .w10p {
   width: 10%;
 }
@@ -603,6 +606,12 @@ select:-internal-list-box {
 }
 .padding-6 {
   padding: 6em;
+}
+.padding-right-2 {
+  padding-right: 2em;
+}
+.padding-right-2-imp {
+  padding-right: 2em !important;
 }
 .margin-right-1 {
   margin-right: 1em;
